--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,9 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-
+    
+      <uses-permission android:name="android.permission.READ_CONTACTS" />
+.
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,8 +18,8 @@
         <activity
             android:name="com.surajc.android.walksafe.activities.WalkSafeActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" 
-            android:theme="@android:style/Theme.Holo.Light">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
